2005-12-05 - johan
Made some changes to enable gcc build for 68000.

2005-12-04 - johan
Added line drawing support to the bitplane driver.

2005-12-02 - johan
A few more bug fixes for the bitplane driver.

2005-12-01 - johan
Fixed a serious bug concerning colour handling in the bitplane driver.

2005-11-30 - johan
Various improvements for the bitplane driver.
Added fill routine from the EmuTOS VDI to the bitplane driver.
Added mouse drawing support to the bitplane driver.

2005-11-29 - johan
Restored the Calamus clip rectangle handling. It is necessary since the
code is actually "borrowing" the original workstation opened by the AES.

2005-11-28 - johan
Added a bitplane driver written in C, based on a significantly modified
version of the EmuTOS VDI blit routines. Definitely needs more work,
but it can at least display a desktop (sort of ;-)

2005-11-23 - standa
Basic ft2 bitmap font support (tested with MS Win .fon fonts).
Performed tests of type-1 as well as TrueType fonts.

A few implementaiton notes:
* font->underline == 0 is used to determine whether metrics for the
  particular font->size were loaded
* font->flags & 0x8000 is FreeType2 handled font flag
* font->flags & 0x4000 is scalable font flag

2005-11-22 - standa
Calamus does all the clipping for the external driver on its own.
Removing wrong wdwidth formulas from the aranym and Calamus drivers.

2005-11-22 - johan
Fixed previously unknown bug in the dispatcher that crashed Calamus.
fVDI engine version bumped to 0.965beta.

2005-11-21 - johan
Modified version of Standa's Calamus support added.
Implemented vsm_string.

2005-11-17 - johan
Made it possible to force call to the fVDI mouse movement vector.
Fix for vbl handler install/remove.

2005-11-15 - johan
Fixed bug that made it impossible to do operations on non-fVDI handles
if running in standalone mode.
Partially implemented vq_devinfo.
Debug messages added for non-fVDI workstation open.